[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-chain"
version = "0.1.0"
description = "A tamper-evident, hash-chained, signed audit log."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["audit_chain*"]
